# StudyBuddy

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  pyproject.toml  render.yaml  run-cheap.ps1  study-system-design-philosophy.md  study-system-requirements.md
.github/workflows/: static.yml
docs/: DECISIONS.md  RUNNING-LIVE.md  study-system-build-plan.md  study-system-flowcharts.md  study-system-spec.md
examples/: extract_structure.input.json  finance-chapter.md  finance-exam.md
heuristics/: config.json
prompts/adapt_item/: index.json  v1.json
prompts/assess_standardization/: index.json  v1.json
prompts/build_dependency_map/: index.json  v1.json
prompts/compose_plan/: index.json  v1.json
prompts/extract_structure/: v1.json  (+1 more)
site/: CNAME  index.html
studybuddy/: __init__.py  administer.py  calibration.py  cli.py  depmap.py  diagnose.py  diagnostic.py  execute.py  ids.py  ingest.py  intake.py  models.py  offline.py  paths.py  philosophy.py  plan.py  proposals.py  registry.py  runlog.py  sampling.py  seed.py  spacing.py  store.py  timebudget.py  usercontext.py  websearch.py  wrapper.py
tests/: conftest.py  test_administer.py  test_auth.py  test_calibration.py  test_cli.py  test_depmap.py  test_diagnose.py  test_diagnostic.py  test_execute.py  test_ids.py  test_ingest.py  test_intake.py  test_models.py  test_offline.py  test_philosophy.py  test_pipeline.py  test_plan.py  test_proposals.py  test_sampling.py  test_seed.py  test_spacing.py  test_store.py  test_supabase_backend.py  test_timebudget.py  test_web.py  test_websearch.py  test_wrapper.py
(+43 files in other folders)
